<?xml version="1.0"?>
<package>
  <name>unit04_description</name>
  <version>2.0.0</version>
  <description>The unit04_description package</description>

  <maintainer email="groadpg@gmail.com">RyodoTanaka</maintainer>
  <license>Apache2.0</license>
  <url type="repository">http://github.com/abot-ros-pkgs/unit04_pkgs</url>
  
  <author email="groadpg@gmail.com">RyodoTanaka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>
  
</package>
